# TAN

./: .gitattributes  .gitignore  .gitmodules  CUsersmaximator_farm.sshknown_hosts  LICENSE.txt  README.md  ReleaseNotes.txt  build_test.jenkinsfile  danrooks_np  danrooks_np.pub  gpark  gpark.pub
OCL_SDK_Light/: OCL_SDK_Light_AMD_dl_instruction.txt
amf/public/: amf-PleaseRead.txt
amf/public/common/: AMFFactory.cpp  AMFSTL.cpp  DataStreamFile.cpp  Thread.cpp  Thread.h  TraceAdapter.h
amf/public/common/Linux/: ThreadLinux.cpp
amf/public/common/Windows/: ThreadWindows.cpp
amf/public/include/components/: FFMPEGComponents.h  VideoEncoderHEVC.h  VideoEncoderVCE.h
amf/public/include/core/: Compute.h  Factory.h  Platform.h  Result.h  Version.h  VulkanAMF.h
amfOpen/: LICENSE.txt
tan/: Contents.html
tan/common/: Allocators.h  FileUtility.cpp  FileUtility.h  RegisterBrowser.cpp  RegisterBrowser.h  StringUtility.cpp  StringUtility.h  Timer.h  Utilities.h  cpucaps.cpp  fifo.cpp  fifo.h  wav.cpp  wav.h
tan/samples/proj/cmake/Ambisonic1stOrderEncoder/: CMakeLists.txt
tan/samples/proj/cmake/CLKernelPreprocessor/: CLKernelPreprocessor.cmake  CMakeLists.txt
tan/samples/proj/cmake/GPUUtilities/: CMakeLists.txt
tan/samples/proj/cmake/ReverbMixer/: CMakeLists.txt
tan/samples/proj/cmake/RoomAcousticQT/: CMakeLists.txt  FindPortaudio.cmake
tan/samples/proj/cmake/RoomAcoustics/: CMakeLists.txt
tan/samples/proj/cmake/TrueAudioVR/: CMakeLists.txt
tan/samples/proj/vs2013/: QT_Macros.props
tan/samples/proj/vs2015/: QT_Macros.props
tan/samples/src/ADL/: ADLQuery.h  ADLquery.cpp
tan/samples/src/Ambisonic1stOrderDecoder/: Ambisonic1stOrderDecoder.cpp
tan/samples/src/Ambisonic1stOrderEncoder/: Ambisonic1stOrderEncoder.cpp
tan/samples/src/Ambisonic2ndOrderEncoder/: Ambisonic2ndOrderEncoder.cpp  Ambisonic2ndOrderEncoder.vcxproj  Ambisonic2ndOrderEncoder.vcxproj.filters  ReadMe.txt
tan/samples/src/AmbisonicVRDecoder/: AmbisonicVRDecoder.cpp  targetver.h
tan/samples/src/CLKernelPreprocessor/: CLKernelPreprocessor.cpp  ReadMe.txt  stdafx.cpp  stdafx.h
tan/samples/src/FileToHeader/: FileToHeader  FileToHeader.cpp  stdafx.cpp
tan/samples/src/GPUUtilities/: GPUUtilities.cpp  GpuUtilities.h  ReadMe.txt  dllmain.cpp  stdafx.cpp  stdafx.h  targetver.h
tan/samples/src/OculusRoomTAN/: PatchOculusRoom.bat  Win32_DirectXAppUtil.h.patch  main.cpp.patch
tan/samples/src/ReverbMixer/: ReadMe.txt  ReverbMixer.cpp  ReverbProcessor.cpp  ReverbProcessor.h
tan/samples/src/RoomAcousticQT/: FileUtility.cpp  FileUtility.h  RegisterBrowser.cpp  RegisterBrowser.h  RoomAcoustic.cpp  RoomAcoustic.h  RoomAcousticQT.cpp  RoomAcousticQT.h  main.cpp  roomaccousticnew.qrc
tan/samples/src/RoomAcoustics/: AudioVR.cpp  AudioVR.h  RoomAcoustics.cpp  RoomAcoustics.h  RoomAcoustics.rc  RoomAcousticsDlg.cpp  RoomAcousticsDlg.h  RoomWindow.cpp  RoomWindow.h  resource.h  stdafx.cpp  stdafx.h  targetver.h
tan/samples/src/TrueAudioVR/: Header.h  TrueAudioVR.cpp  TrueAudioVR.h  TrueAudioVR.rc  dllmain.cpp  resource1.h  stdafx.cpp  targetver.h
tan/samples/src/common/: AlsaPlayer.cpp  AlsaPlayer.h  GpuUtils.cpp  GpuUtils.h  IWavPlayer.h  PortPlayer.cpp  PortPlayer.h  SimpleVRaudio.cpp  SimpleVRaudio.h  WASAPIPlayer.cpp  WASAPIPlayer.h  WASAPIUtils.cpp  WASAPIUtils.h  WasAPI.h  cpucaps.h  fifo.cpp  fifo.h  maxlimits.h  threads.cpp  threads.h  utilities.c  utilities.h  wav.cpp  wav.h
tan/tanlibrary/include/: TrueAudioNext.h
tan/tanlibrary/proj/cmake/Graal/: CMakeLists.txt
tan/tanlibrary/proj/cmake/Graal2/: CMakeLists.txt
tan/tanlibrary/proj/cmake/TAN/: CMakeLists.txt
tan/tanlibrary/proj/cmake/amf/: CMakeLists.txt
tan/tanlibrary/proj/cmake/clFFT/: CMakeLists.txt
tan/tanlibrary/src/: HowTo(clFFT).txt
tan/tanlibrary/src/Graal/: GraalConv.cpp  GraalConv.hpp  GraalConvOCL.cpp  GraalConvOCL.hpp  GraalConv_clFFT.cpp  GraalConv_clFFT.hpp  GraalFHT.cl  GraalInternal.h  GraalUtil.cl  amdFFT_conv_kernels.cl  amdFHT.cpp  amdFHT.h  amdFIR_kernels.cl
tan/tanlibrary/src/Graal2/: DirectConv.cpp  DirectConv_OCL.h  Graal.cpp  Graal.h  GraalDeployment.bat  GraalInternal.h  GraalWrapper.cpp  GraalWrapper.h  IIRLowLat.h  IIRLowLat_OCL.h  OpenCLInit.cpp  README.md  Reverberate.cpp  Reverberate2.cpp  Reverberate2_OCL.h  Reverberate_OCL.h  Util_kernels.cl  amdFHT.cpp  amdFHT.h  amdFHT2_kernels.cl  amdFHT_OCL.cpp  amdFHT_OCL.h  amdFHT_kernels.cl  amdFHTbig_kernels.cl  amdFHTmad_kernels.cl  amdFIR_OCL.cpp  amdFIR_OCL.h  amdFIR_kernels.cl
tan/tanlibrary/src/TrueAudioNext/: resource.h  version.rc
tan/tanlibrary/src/clFFT-master/: .gitattributes  clFFT-PleaseRead.txt
tan/tanlibrary/src/common/: OCLHelper.cpp  OCLHelper.h  cpucaps.h
tan/tanlibrary/src/fftw-3.3.5/: ReadMe.txt
tan/tests/TALibTestConvolution/: TALibTestConvolution.vcxproj  TALibTestConvolution.vcxproj.filters
tan/tests/TALibVRTest/: TALibVRTest.cpp  TALibVRTest.vcxproj
tan/tests/TANUnitTestAll/: AudioBuffer.cpp  AudioBuffer.h  Converter_Test.h  Converter_Test_Impl.cpp  ConvolutionTest.h  ConvolutionTestImpl.cpp  FFTTest.h  FFTTestImpl.cpp  MathTest.h  MathTestImpl.cpp  ReadMe.txt  TANTestSuitsParam.cpp  TANTestSuitsParam.h  TANUnitTestAll.cpp  TANUnitTestAll.vcxproj  TANUnitTestAll.vcxproj.filters  TestList.cpp  TestList.h  common.cpp  common.h  stdafx.cpp
tan/tests/TANUnitTestAll/common/: UnitTest.cpp  UnitTest.h  anyoption.cpp  anyoption.h
tan/tests/proj/cmake/TALibDopplerTest/: CMakeLists.txt
tan/tests/proj/cmake/TALibTestConvolution/: CMakeLists.txt
tan/tests/proj/cmake/TALibTestDynamicChannelConvolution/: CMakeLists.txt
tan/tests/proj/cmake/TanDeviceResourcesTest/: CMakeLists.txt
tan/tests/src/TALibDopplerTest/: TALibDopplerTest.cpp  roomLong.xml  stdafx.h
tan/tests/src/TALibTestConvolution/: ReadMe.txt  TALibTestConvolution.cpp  TestTAN.bat  TestTAN.sh
tan/tests/src/TALibVRTest/: TALibVRTest.cpp  room1.xml  stdafx.cpp  stdafx.h  targetver.h
tan/tests/src/TanDeviceResources/: TanDeviceResources.cpp
tan/tests/testfiles/: anechoicroom.xml  bigroom.xml  default.xml  mediumroom.xml  mediumroomMaxEcho.xml
(+181 files in other folders)
